--- a/output/output.html
+++ b/output/output.html
@@ -1,12 +1,1 @@
-
-    <!DOCTYPE html>
-    <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>Converted PDF</title>
-    </head>
-    <body>
-        
-    </body>
-    </html>
-    
+<html><body></body></html>
